infrastructure/flux-system/ingress.flux-webhook-receiver.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: webhook-receiver
  namespace: flux-system
spec:
  rules:
  - host: flux-webhook-receiver.pekware.club
    http:
      paths:
      - backend:
          service:
            name: webhook-receiver
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - flux-webhook-receiver.pekware.club
    secretName: star.pekware.club
status:
  loadBalancer: {}
